# mech-eng-job-analysis-2010-to-2022

./: LICENSE  README.md  phase_1.ipynb  phase_2.ipynb  phase_3.ipynb  pyproject.toml
config/: analysis_config.json  classifier_parameters.json  mechanical_terms.json
data_exploration/: geo_descriptive_stats.csv  geo_exploration.ipynb  geo_missing_value_stats.csv
data_exploration/.ipynb_checkpoints/: geo_exploration-checkpoint.ipynb
utils/: __init__.py  classifier_utils.py  duckdb_manager.py  onet_utils.py  publication_utils.py  skills_utils.py  statistics_utils.py  visualization_utils.py
